// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CityItem snapshot Should CityItem render correctly when isActive={false} 1`] = `
<li
  className="locations__item"
>
  <a
    className="locations__item-link tabs__item "
    href="#"
    onClick={[Function]}
  >
    <span>
      Paris
    </span>
  </a>
</li>
`;

exports[`CityItem snapshot Should CityItem render correctly when isActive={true} 1`] = `
<li
  className="locations__item"
>
  <a
    className="locations__item-link tabs__item tabs__item--active"
    href="#"
    onClick={[Function]}
  >
    <span>
      Paris
    </span>
  </a>
</li>
`;
